# rust-fullstack-template

./: .gitignore  README.md  install.sh  run.sh
.devcontainer/: devcontainer.json  docker-compose.yml
fullstack-client/: package.json
fullstack-server/: Cargo.toml  Rocket.toml
fullstack-server/src/models/: auth.rs  server.rs
invex-client/: package.json  vite.config.ts
invex-server/: Cargo.toml  Rocket.toml
invex-server/src/: config.rs  main.rs
invex-server/src/models/: auth.rs  error.rs  mod.rs  server.rs
